--- a/src/assets/my-styles.scss
+++ b/src/assets/my-styles.scss
@@ -1,3 +1,9 @@
+$main-bg-color: #2a2931;
+$rated: #ffd700;
+$default-text-color: #fff;
+$default_bg_color: #000;
+
+
 div {
     box-sizing: border-box;
 }
@@ -5,16 +11,21 @@ div {
 body {
     margin: 0;
     padding: 0;
+    background-color: $main-bg-color;
 }
-
-
-$main-bg-color: #2a2931;
-$rated: #ffd700;
-$default-text-color: #fff;
-$default_bg_color: #000;
 
 .cont {
     background-color: $main-bg-color;
+}
+
+.rated {
+    color: $rated;
+}
+
+.rates {
+    margin-top: 10px;
+    margin-right: 7px;
+    cursor: pointer;
 }
 
 @mixin flexy {
@@ -33,4 +44,23 @@ $default_bg_color: #000;
     top: 10px;
     color: $default-text-color;
     @include flexy;
+}
+
+a {
+    color: inherit; 
+    text-decoration: none; 
+  }
+  
+  a:hover {
+    text-decoration: none; 
+    color: inherit; 
+  }
+
+  .movie_cont {
+    display: flex;
+    background-color: $main-bg-color;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 15px 50px;
+   
 }
