--- a/src/assets/my-styles.scss
+++ b/src/assets/my-styles.scss
@@ -28,6 +28,29 @@ body {
     cursor: pointer;
 }
 
+.rates_group {
+    display: flex;
+    justify-content: space-around;
+}
+
+a {
+    color: inherit; 
+    text-decoration: none; 
+}
+  
+a:hover {
+    text-decoration: none; 
+    color: inherit; 
+}
+
+.movie_cont {
+    display: flex;
+    background-color: $main-bg-color;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 15px 50px;
+}
+
 @mixin flexy {
     display: flex;
     align-items: center;
@@ -45,23 +68,3 @@ body {
     color: $default-text-color;
     @include flexy;
 }
-
-a {
-    color: inherit; 
-    text-decoration: none; 
-  }
-  
-  a:hover {
-    text-decoration: none; 
-    color: inherit; 
-  }
-
-  .movie_cont {
-    display: flex;
-    background-color: $main-bg-color;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 15px 50px;
-   
-}
-
